# rust-pcre

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  LICENSE-MIT  Makefile  README.md  pkg.rs
examples/: pcredemo.rs
libpcre-sys/: Cargo.toml  build.rs
libpcre-sys/src/: lib.rs
src/: lib.rs  pcre.rs
src/detail/: mod.rs
src/pcre/: lib.rs  mod.rs  pkg.rs  test.rs
src/pcre/detail/: mod.rs  native.rs  native.rs.in
src/pcredemo/: main.rs
tests/: test.rs
