[package]
name = "pcre"
version = "0.1.0"
authors = ["The rust-pcre authors"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["regexp", "regular-expressions", "pcre"]
repository = "https://github.com/cadencemarseille/rust-pcre"
documentation = "http://www.rust-ci.org/cadencemarseille/rust-pcre/doc/pcre/"
homepage = "https://github.com/cadencemarseille/rust-pcre"
description = """
Rust wrapper for libpcre.
"""

[lib]
name = "pcre"

[dependencies]
enum-set = ">= 0.0.5"
libc = "*"
log = "*"

[dependencies.libpcre-sys]
path = "libpcre-sys"
version = "0.1.0"

[dev-dependencies]
getopts = "*"
