[package]
name = "pcre"
version = "0.2.3"
authors = ["The rust-pcre authors"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["regexp", "regex", "regular-expressions", "pcre"]
repository = "https://github.com/cadencemarseille/rust-pcre"
documentation = "http://www.rust-ci.org/cadencemarseille/rust-pcre/doc/pcre/"
homepage = "https://github.com/cadencemarseille/rust-pcre"
description = """
Rust wrapper for libpcre.
"""

[lib]
name = "pcre"

[dependencies]
enum-set = ">= 0.0.5"
libc = "0.2"

[dependencies.libpcre-sys]
path = "libpcre-sys"
version = "0.2.2"

[dev-dependencies]
getopts = "0.2"
