[package]
name = "libpcre-sys"
version = "0.2.1"
authors = ["The rust-pcre authors"]
license = "MIT/Apache-2.0"
keywords = ["pcre"]
repository = "https://github.com/cadencemarseille/rust-pcre"
links = "pcre"
build = "build.rs"
description = "Native bindings to libpcre"

[lib]
name = "libpcre_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
bzip2 = "0.3"
pkg-config = "0.3"
tar = "0.4"
